--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: never
 
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
+
   jpa:
     hibernate:
       ddl-auto: update
