--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,13 +1,15 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h
 
 
-spring.datasource.url=jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1
+#spring.datasource.url=jdbc:mysql://localhost:3306/weighttest?serverTimezone=UTC
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.data-username=
+spring.datasource.data-username=sa
 spring.datasource.data-password=
+spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=none
 
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.schema=classpath:./schema.sql
-spring.datasource.data=classpath:./data-test.sql
+spring.datasource.data=classpath:./data.sql
