Delete truck's equales, HashCode and toString, delete @Table annotation added in-memory tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,8 +6,6 @@ spring.datasource.data-username=sa
 spring.datasource.data-password=
 spring.datasource.initialization-mode=always
 
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.schema=classpath:./schema.sql
-spring.datasource.data=classpath:./data.sql
